--- a/index.html
+++ b/index.html
@@ -59,6 +59,23 @@
                     </ul>
                 </li>
                 <li>
+                    <a href="#destSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                        <i class="fas fa-suitcase"></i>
+                        Destinations
+                    </a>
+                    <ul class="collapse list-unstyled" id="destSubmenu">
+                        <li>
+                            <a href="#">Paris</a>
+                        </li>
+                        <li>
+                            <a href="#">Bordeaux</a>
+                        </li>
+                        <li>
+                            <a href="#">Strasbourg</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
                     <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                         <i class="fas fa-ticket-alt"></i>
                         Ticket
@@ -109,7 +126,6 @@
 
                     <button type="button" id="sidebarCollapse" class="btn btn-info">
                         <i class="fas fa-align-left"></i>
-                        <span>Toggle Sidebar</span>
                     </button>
                     <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="fas fa-align-justify"></i>
@@ -118,31 +134,13 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav navbar-nav ml-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="#">Page</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Page</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Page</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Page</a>
+                                <a class="nav-link" href="#">Accueil</a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </nav>
-
-            <h2>Carte des destinations</h2>
-            <p>Le TGV vaincra le Covid</p>
-
-            <div class="line"></div>
-
             <div class="folium-map" id="map" ></div>
-
-
-            <div class="line"></div>
 
         </div>
     </div>
