--- a/destination.html
+++ b/destination.html
@@ -175,7 +175,7 @@
                     </div>
 
                     </header>
-                    <section class="container-flex" id="beer_container" style="background: url(/static/img/bar.jpg) no-repeat center center fixed; min-height : 100vh; background-position: center; background-size: cover;">
+                    <section class="container-flex" id="beer_container" style="background: url(img/bar.jpg) no-repeat center center fixed; min-height : 100vh; background-position: center; background-size: cover;">
                         <div class="container">
                             <div class="row"><div class="col-12"><p></p></div></div>
                             <div class="row justify-content-center" >
@@ -187,7 +187,7 @@
                             <div class="row">
                                     <div class="col md-auto">
                                         <div class ='d-flex justify-content-between'>
-                                        <div class="col"><img src="/static/img/mug.png" height="100"></div>
+                                        <div class="col"><img src="img/mug.png" height="100"></div>
                                         <div class="md-auto col">
                                             <div class="card" style="min-width: 300px; background-color: rgba(255, 255, 255, 0.6)">
                                                 <p style="margin: 10px"><strong>Prix moyen de la pinte</strong><br>
