--- a/destination.html
+++ b/destination.html
@@ -26,7 +26,8 @@
     <!-- JavaScript file extern -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-     <!-- JavaScript file intern -->
+    <!-- Include Firebase Library and Config-->
+    <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase.js"></script>
 
 </head>
 <body>
@@ -295,7 +296,7 @@
             </div>
             </div>
         </div>
-        <script src="provide_info.js"></script>
+
 
         </div>
     </div>
@@ -317,13 +318,16 @@
             });
         });
     </script>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-database.js"></script>
+
     <!-- TODO: Add SDKs for Firebase products that you want to use
-    https://firebase.google.com/docs/web/setup#available-libraries -->
+         https://firebase.google.com/docs/web/setup#available-libraries -->
     <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-analytics.js"></script>
 
-    <script>
-
-    </script>
     <script src="provide_info.js"></script>
 </body>
 
