reorganize project folder

--- a/app/pages/destination.html
+++ b/app/pages/destination.html
@@ -141,7 +141,7 @@
                 </div>
             </nav>
              <div class="background">
-                    <div class="container-flex h-100" id="background" style="no-repeat center center fixed; min-height: 90vh; background-position: center; background-size: cover">
+                    <div class="container-flex h-100" id="background" style="no-repeat center fixed; min-height: 90vh; background-position: center; background-size: cover">
                         <div class="row h-100">
                             <div class="col-5">
                                 <h1 class="text-center text-uppercase text-white font-weight-bold" id="city_welcome">Bienvenue à </h1></div>
