--- a/destination.html
+++ b/destination.html
@@ -324,11 +324,9 @@
     <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-database.js"></script>
 
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-         https://firebase.google.com/docs/web/setup#available-libraries -->
     <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-analytics.js"></script>
 
-    <script src="provide_info.js"></script>
+    <script src="scripts/provide_info.js"></script>
 </body>
 
 </html>
