--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             });
         });
     </script>
-    <script src="homepage.js"></script>
+    <script src="scripts/homepage.js"></script>
 </body>
 
 </html>
