--- a/destination.html
+++ b/destination.html
@@ -176,7 +176,7 @@
                     </div>
 
                     </header>
-                    <section class="container-flex" id="beer_container" style="background: url(img/bar.jpg) no-repeat center center fixed; min-height : 100vh; background-position: center; background-size: cover;">
+                    <section class="container-flex" id="beer_container" style="background: url(images/icons/bar.jpg) no-repeat center center fixed; min-height : 100vh; background-position: center; background-size: cover;">
                         <div class="container">
                             <div class="row"><div class="col-12"><p></p></div></div>
                             <div class="row justify-content-center" >
@@ -188,7 +188,7 @@
                             <div class="row">
                                     <div class="col md-auto">
                                         <div class ='d-flex justify-content-between'>
-                                        <div class="col"><img src="img/mug.png" height="100"></div>
+                                        <div class="col"><img src="images/icons/mug.png" height="100"></div>
                                         <div class="md-auto col">
                                             <div class="card" style="min-width: 300px; background-color: rgba(255, 255, 255, 0.6)">
                                                 <p style="margin: 10px"><strong>Prix moyen de la pinte</strong><br>
@@ -207,7 +207,7 @@
                                         </div>
                                     </div>
                                     <div class="col md-auto">
-                                        <div class="col 1"><img src="img/sign.png" height="100"></div>
+                                        <div class="col 1"><img src="images/icons/sign.png" height="100"></div>
                                         <div class="mx-auto col-sm-4 text-center"><p class="text-white-50 mb-4 center">Col 2</p></div>
                                     </div>
                             </div>
