--- a/index.html
+++ b/index.html
@@ -61,37 +61,29 @@
                 <li>
                     <a href="#destSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                         <i class="fas fa-suitcase"></i>
-                        Destinations
+                        Places
                     </a>
-                    <ul class="collapse list-unstyled" id="destSubmenu">
-                        <li>
-                            <a href="#">Paris</a>
-                        </li>
-                        <li>
-                            <a href="#">Bordeaux</a>
-                        </li>
-                        <li>
-                            <a href="#">Strasbourg</a>
-                        </li>
+                    <ul class="collapse list-unstyled disable-scrollbars" id="destSubmenu" style="max-height: 150px;overflow-y: scroll;">
+                        <!-- destination list will be generated dynamically here -->
                     </ul>
                 </li>
-                <li>
-                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-                        <i class="fas fa-ticket-alt"></i>
-                        Ticket
-                    </a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu">
-                        <li>
-                            <a href="#">Paris -> Bordeaux</a>
-                        </li>
-                        <li>
-                            <a href="#">Strasbourg -> Paris</a>
-                        </li>
-                        <li>
-                            <a href="#"> ... </a>
-                        </li>
-                    </ul>
-                </li>
+<!--                <li>-->
+<!--                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">-->
+<!--                        <i class="fas fa-ticket-alt"></i>-->
+<!--                        Ticket-->
+<!--                    </a>-->
+<!--                    <ul class="collapse list-unstyled" id="pageSubmenu">-->
+<!--                        <li>-->
+<!--                            <a href="#">Paris -> Bordeaux</a>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <a href="#">Strasbourg -> Paris</a>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <a href="#"> ... </a>-->
+<!--                        </li>-->
+<!--                    </ul>-->
+<!--                </li>-->
             </ul>
 
 
@@ -127,11 +119,44 @@
                     <button type="button" id="sidebarCollapse" class="btn btn-info">
                         <i class="fas fa-align-left"></i>
                     </button>
+
+                    <!-- Modal -->
+                    <div class="modal" id="myModal" role="dialog" data-backdrop="false">
+                        <div class="modal-dialog">
+
+                            <!-- Modal content-->
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h4 class="modal-title">Vos informations...</h4>
+                                </div>
+                                <div class="modal-body" id="user_msg">
+
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" id="close" class="btn btn-default" data-dismiss="modal">Close</button>
+                                </div>
+                                <script>$(document).on('click','#close',function(){$('.modal').hide();});</script>
+                            </div>
+
+                        </div>
+                    </div>
+
                     <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="fas fa-align-justify"></i>
                     </button>
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <div class="login-container">
+                            <div class="form-inline">
+                                <label id="infos" class="mr-sm-2"></label>
+
+                                <input type="text" class="form-control mb-2 mr-sm-2" placeholder="Username" name="username" id="user">
+                                <input type="password" class="form-control mb-2 mr-sm-2" placeholder="Password" name="password" id="password">
+                                <button id="signin" class="btn btn-primary mb-2 mr-sm-2">Sign in</button>
+                                <button id="signup" class="btn btn-primary mb-2 mr-sm-2">Sign up</button>
+                            </div>
+                            <script src="scripts/login.js"></script>
+                        </div>
                         <ul class="nav navbar-nav ml-auto">
                             <li class="nav-item active">
                                 <a class="nav-link" href="#">Accueil</a>
@@ -140,6 +165,7 @@
                     </div>
                 </div>
             </nav>
+
             <div class="folium-map" id="map" ></div>
 
         </div>
@@ -154,7 +180,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <!-- Bootstrap JS -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-
+    <!-- Leaflet JS -->
     <script src="https://cdn.jsdelivr.net/npm/leaflet@1.5.1/dist/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js"></script>
 
@@ -165,7 +191,7 @@
             });
         });
     </script>
-    <script src="scripts/homepage.js"></script>
+    <script src="scripts/index.js"></script>
 </body>
 
 </html>
