--- a/index.html
+++ b/index.html
@@ -15,167 +15,33 @@
     <link rel="stylesheet" href="styles/style.css">
 
     <!-- Font Awesome JS -->
-    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
+    <script src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
+    <script src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
 
-    <!-- CSS file-->
+    <!-- Leaflet CSS-->
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.5.1/dist/leaflet.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css"/>
     <link rel="stylesheet" href="https://rawcdn.githack.com/python-visualization/folium/master/folium/templates/leaflet.awesome.rotate.css"/>
-    <!-- JavaScript file extern -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-     <!-- JavaScript file intern -->
-
+    <!-- JQuery JS-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
 </head>
 
 <body>
-
     <div class="wrapper">
-        <!-- Sidebar  -->
-        <nav id="sidebar">
-            <div class="sidebar-header">
-                <h3>LhoKho</h3>
-                <strong>LK</strong>
-            </div>
-
-            <ul class="list-unstyled components">
-                <li class="active">
-                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-                        <i class="fas fa-user"></i>
-                        User
-                    </a>
-                    <ul class="collapse list-unstyled" id="homeSubmenu">
-                        <li>
-                            <a href="#">Informations</a>
-                        </li>
-                        <li>
-                            <a href="#">Historique</a>
-                        </li>
-                        <li>
-                            <a href="#">Favoris</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#destSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-                        <i class="fas fa-suitcase"></i>
-                        Places
-                    </a>
-                    <ul class="collapse list-unstyled disable-scrollbars" id="destSubmenu" style="max-height: 150px;overflow-y: scroll;">
-                        <!-- destination list will be generated dynamically here -->
-                    </ul>
-                </li>
-<!--                <li>-->
-<!--                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">-->
-<!--                        <i class="fas fa-ticket-alt"></i>-->
-<!--                        Ticket-->
-<!--                    </a>-->
-<!--                    <ul class="collapse list-unstyled" id="pageSubmenu">-->
-<!--                        <li>-->
-<!--                            <a href="#">Paris -> Bordeaux</a>-->
-<!--                        </li>-->
-<!--                        <li>-->
-<!--                            <a href="#">Strasbourg -> Paris</a>-->
-<!--                        </li>-->
-<!--                        <li>-->
-<!--                            <a href="#"> ... </a>-->
-<!--                        </li>-->
-<!--                    </ul>-->
-<!--                </li>-->
-            </ul>
-
-
-            <ul class="list-unstyled CTAs">
-                <li>
-                    <a href="#">
-                        <i class="fas fa-plus"></i>
-                        Create
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="fas fa-question"></i>
-                        FAQ
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="fas fa-paper-plane"></i>
-                        Contact
-                    </a>
-                </li>
-            </ul>
-
-        </nav>
-
-        <!-- Page Content  -->
+        <div id="side-nav"></div>
         <div id="content">
-
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-
-                    <button type="button" id="sidebarCollapse" class="btn btn-info">
-                        <i class="fas fa-align-left"></i>
-                    </button>
-
-                    <!-- Modal -->
-                    <div class="modal" id="myModal" role="dialog" data-backdrop="false">
-                        <div class="modal-dialog">
-
-                            <!-- Modal content-->
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h4 class="modal-title">Vos informations...</h4>
-                                </div>
-                                <div class="modal-body" id="user_msg">
-
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" id="close" class="btn btn-default" data-dismiss="modal">Close</button>
-                                </div>
-                                <script>$(document).on('click','#close',function(){$('.modal').hide();});</script>
-                            </div>
-
-                        </div>
-                    </div>
-
-                    <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <i class="fas fa-align-justify"></i>
-                    </button>
-
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <div class="login-container">
-                            <div class="form-inline">
-                                <label id="infos" class="mr-sm-2"></label>
-
-                                <input type="text" class="form-control mb-2 mr-sm-2" placeholder="Username" name="username" id="user">
-                                <input type="password" class="form-control mb-2 mr-sm-2" placeholder="Password" name="password" id="password">
-                                <button id="signin" class="btn btn-primary mb-2 mr-sm-2">Sign in</button>
-                                <button id="signup" class="btn btn-primary mb-2 mr-sm-2">Sign up</button>
-                            </div>
-                            <script src="scripts/login.js"></script>
-                        </div>
-                        <ul class="nav navbar-nav ml-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="#">Accueil</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-
+            <div id="top-nav"></div>
+            <!-- START CONTENT  -->
             <div class="folium-map" id="map" ></div>
-
+            <!-- STOP CONTENT  -->
         </div>
     </div>
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-app.js"></script>
-
     <!-- jQuery CDN - Slim version (=without AJAX) -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <!-- Popper.JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <!-- Bootstrap JS -->
@@ -183,9 +49,11 @@
     <!-- Leaflet JS -->
     <script src="https://cdn.jsdelivr.net/npm/leaflet@1.5.1/dist/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js"></script>
-
     <script type="text/javascript">
+        $("#top-nav").load("pages/top-nav.html");
+        $("#side-nav").load("pages/side-nav.html");
         $(document).ready(function () {
+
             $('#sidebarCollapse').on('click', function () {
                 $('#sidebar').toggleClass('active');
             });
