--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
             });
         });
     </script>
-    <script src="scripts/index.js"></script>
+    <script src="scripts/navigation.js"></script>
+    <!-- Additional scripts -->
+    <script src="scripts/generalMap.js"></script>
 </body>
 
 </html>
