change background management

--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-database.js"></script>
     <!-- jQuery CDN - Slim version (=without AJAX) -->
-    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js" ></script>
     <!-- Popper.JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <!-- Bootstrap JS -->
@@ -50,6 +51,20 @@
     <script src="https://cdn.jsdelivr.net/npm/leaflet@1.5.1/dist/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js"></script>
     <script type="text/javascript">
+        // Your web app's Firebase configuration
+        var firebaseConfig = {
+            apiKey: "AIzaSyDTzIHmzLtV18PlC_rhmUlVBoj0FMty2U8",
+            authDomain: "lhokho.firebaseapp.com",
+            databaseURL: "https://lhokho.firebaseio.com",
+            projectId: "lhokho",
+            storageBucket: "lhokho.appspot.com",
+            messagingSenderId: "914809444198",
+            appId: "1:914809444198:web:35ffb12ed619dd2de41aa7",
+            measurementId: "G-KEBX9V4BPX"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+
         $("#top-nav").load("pages/top-nav.html");
         $("#side-nav").load("pages/side-nav.html");
         $(document).ready(function () {
