--- a/pages/top-nav.html
+++ b/pages/top-nav.html
@@ -47,7 +47,7 @@
             </div>
             <ul class="nav navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Accueil</a>
+                    <a class="nav-link" href="index.html">Accueil</a>
                 </li>
             </ul>
         </div>
