add distance information and custom selection according to distance

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <!-- Leaflet JS -->
     <script src="https://cdn.jsdelivr.net/npm/leaflet@1.5.1/dist/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js"></script>
+    <script src="scripts/leaflet-slider.js"></script>
     <script type="text/javascript">
         // Your web app's Firebase configuration
         var firebaseConfig = {
