--- a/pages/top-nav.html
+++ b/pages/top-nav.html
@@ -35,14 +35,14 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="login-container">
-                <div class="form-inline">
-                    <label id="infos" class="mr-sm-2"></label>
+<!--                <div class="form-inline">-->
+<!--                    <label id="infos" class="mr-sm-2"></label>-->
 
-                    <input type="text" class="form-control mb-2 mr-sm-2" placeholder="Username" name="username" id="user">
-                    <input type="password" class="form-control mb-2 mr-sm-2" placeholder="Password" name="password" id="password">
-                    <button id="signin" class="btn btn-primary mb-2 mr-sm-2">Sign in</button>
-                    <button id="signup" class="btn btn-primary mb-2 mr-sm-2">Sign up</button>
-                </div>
+<!--                    <input type="text" class="form-control mb-2 mr-sm-2" placeholder="Username" name="username" id="user">-->
+<!--                    <input type="password" class="form-control mb-2 mr-sm-2" placeholder="Password" name="password" id="password">-->
+<!--                    <button id="signin" class="btn btn-primary mb-2 mr-sm-2">Sign in</button>-->
+<!--                    <button id="signup" class="btn btn-primary mb-2 mr-sm-2">Sign up</button>-->
+<!--                </div>-->
                 <script src="scripts/login.js"></script>
             </div>
             <ul class="nav navbar-nav ml-auto">
