add weather and correct html
*add html div to connect weather
*insert js routine to call weather API
*correct bar map

--- a/destination.html
+++ b/destination.html
@@ -65,37 +65,59 @@
         <!-- START CONTENT  -->
         <div class="background">
                     <div class="container-flex h-100" id="background" style="no-repeat center fixed; min-height: 90vh; background-position: center; background-size: cover">
-                        <div class="row h-100">
+                        <div class="row h-50">
                             <div class="col-5">
                                 <h1 class="text-center text-uppercase text-white font-weight-bold" id="city_welcome">Bienvenue à </h1></div>
                             <div class="col-6 col-md-4">
                                 <h2 class="text-center text-white font-weight-normal"></h2></div>
                         </div>
                         <div class="row h-100">
-                            <div class="mx-auto col-sm-3 text-center col-sm-offset-1">
-                                <p></p>
+                            <div class="mx-auto col-sm-4 text-center col-sm-offset-1">
                                 <p></p>
                                 <a class="btn btn-primary btn-lg js-scroll-trigger" id="items-link" href="#items_container" >C'est beau ! Montre moi en plus !</a>
                                 <p></p>
-                                <p></p>
                                 <a class="btn btn-primary btn-lg js-scroll-trigger" id="beer_link" href="#biere">Et où est la bodega ?</a>
                                 <p></p>
-                                <p></p>
+                                <div class="card-deck">
+                                    <div class="card" style="max-width: 20rem; height: 15rem;">
+                                        <div class="card-header" id="w_1">
+
+                                        </div>
+                                        <img class="temp_" id="icon_1"  src="" alt="">
+                                        <div class="card-body">
+                                            <h4 id="temp_1"></h4>
+                                        </div>
+                                    </div>
+                                    <div class="card" style="max-width: 20rem; height: 15rem;">
+                                        <div class="card-header" id="w_2">
+                                        </div>
+                                        <img class="card-img-top" id="icon_2" src="" alt="">
+                                        <div class="card-body">
+                                            <h4 id="temp_2"></h4>
+                                        </div>
+                                    </div>
+                                    <div class="card" style="max-width: 20rem; height: 15rem;">
+                                        <div class="card-header" id="w_3">
+                                        </div>
+                                        <img class="card-img-top" id="icon_3" src="" alt="">
+                                        <div class="card-body">
+                                            <h4 id="temp_3"></h4>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <div class="mx-auto col-sm-4 text-center">
-                            <div class="card" style="background-color: rgba(255, 255, 255, 0.6)">
-                                <p><strong>Département : </strong><label id="city_departement"></label></p>
-                                <p><strong>Région : </strong><label id="city_region"></label></p>
-                                <p><strong>Population : </strong><label id="city_population"></label> habitants</p>
-                                <p><strong>Densité de population : </strong><label id="city_densite"></label> hab/km2</p>
-                                <p><strong>Gentillé : </strong><label id="city_gentile"></label></p>
-                                <p><strong>Superficie : </strong><label id="city_superficie"></label></p>
-                                <p><strong>Altitude : </strong><label id="city_altitude"></label></p>
-                            </div>
+                                <div class="card" style="background-color: rgba(255, 255, 255, 0.6)">
+                                    <p><strong>Département : </strong><label id="city_departement"></label></p>
+                                    <p><strong>Région : </strong><label id="city_region"></label></p>
+                                    <p><strong>Population : </strong><label id="city_population"></label> habitants</p>
+                                    <p><strong>Densité de population : </strong><label id="city_densite"></label> hab/km2</p>
+                                    <p><strong>Gentillé : </strong><label id="city_gentile"></label></p>
+                                    <p><strong>Superficie : </strong><label id="city_superficie"></label></p>
+                                    <p><strong>Altitude : </strong><label id="city_altitude"></label></p>
+                                </div>
                             </div>
                         </div>
-                        <div class="row h-100">
-                            <div class="col-sm"></div></div>
                     </div>
 
                  <section class="container-flex" id="beer_container" style="background: url(images/icons/bar.jpg) no-repeat center center fixed; min-height : 100vh; background-position: center; background-size: cover;">
