add weather storage system *add save to firebase elements *allow only some call to be done

--- a/destination.html
+++ b/destination.html
@@ -83,7 +83,7 @@
                                         <div class="card-header" id="w_1">
 
                                         </div>
-                                        <img class="temp_" id="icon_1"  src="" alt="">
+                                        <img class="card-img-top" id="icon_1"  src="" alt="">
                                         <div class="card-body">
                                             <h4 id="temp_1"></h4>
                                         </div>
