--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <div class="wrapper">
         <div id="side-nav"></div>
         <div id="content">
-            <div id="top-nav"></div>
+            <div id="top-nav" class="stick"></div>
             <!-- START CONTENT  -->
-            <div class="folium-map" id="map" ></div>
+            <div class="map" id="map" ></div>
             <!-- STOP CONTENT  -->
         </div>
     </div>
