--- a/pages/side-nav.html
+++ b/pages/side-nav.html
@@ -30,14 +30,26 @@
                 <i class="fas fa-suitcase"></i>
                 Places
             </a>
-            <ul class="collapse list-unstyled disable-scrollbars" id="destSubmenu" style="max-height: 150px;overflow-y: scroll;">
+            <ul class="collapse list-unstyled disable-scrollbars" id="destSubmenu" style="max-height: 200px;overflow-y: scroll;">
                 <!-- destination list will be generated dynamically here -->
             </ul>
+        </li>
+        <li>
+            <a href="#tripMenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                <i class="fas fa-forward"></i>
+                Trip
+            </a>
         </li>
     </ul>
 
 
     <ul class="list-unstyled CTAs">
+        <li>
+            <a href="index.html">
+                <i class="fas fa-home"></i>
+                Accueil
+            </a>
+        </li>
         <li>
             <a href="#">
                 <i class="fas fa-plus"></i>
